# telegram-bulk-exporter

./: .env.example  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
scripts/: fetch_tdl.ps1  fetch_tdl.sh  restart_server.bat  run.bat  start_server.bat
src/: __init__.py  composition.py  config.py  logging_setup.py  main.py
src/api/: _chats_refresh_stamp.py  routes_auth.py  routes_avatars.py  routes_chats.py  routes_debug.py  routes_history.py  routes_jobs.py  routes_proxy.py  routes_telegram.py  telegram_service.py
src/auth/: __init__.py  backup_codes.py  persist.py  rate_limit.py  session.py  store.py  totp.py  user_prefs.py
src/crypto/: __init__.py  aead.py  file_cipher.py  kdf.py  memory.py  vault.py
src/db/: __init__.py  models.py  session.py
src/jobs/: __init__.py  exporter.py  history.py  history_enrich.py  job_manager.py  models.py  persistence.py
src/services/: auto_update.py  avatar_resumer.py  deduplicator.py  proxy_pool.py  tdl_login.py  tdl_orphan_killer.py  tdl_progress_parser.py  tdl_retry.py  tdl_types.py  tdl_wrapper.py
src/telegram/: __init__.py  proxy.py  telethon_client.py
src/web/static/tg_export/: editor.html
src/web/templates/: _chats_fragment.html  _export_modal.html  _flash.html  _proxy_fragment.html  base.html  chats.html  index.html  job_detail.html  jobs.html  login.html  login_2fa.html  proxy.html  setup.html  setup_backup_codes.html  setup_totp.html  tdl_login.html  telegram_2fa.html  telegram_code.html  telegram_dashboard.html  telegram_phone.html
tests/: conftest.py
tests/integration/: test_chats_filters_e2e.py  test_jobs_flow.py  test_tdl_wrapper_subprocess.py
tests/unit/: test_auth_backup_codes.py  test_auth_rate_limit.py  test_auth_session.py  test_auth_totp.py  test_auto_lock_duration.py  test_auto_update.py  test_auto_update_routes.py  test_avatar_resumer.py  test_chat_search.py  test_chats_row_actions.py  test_chats_search_normalize.py  test_composition.py  test_config_tdl_binary_default.py  test_crypto_aead.py  test_crypto_file_cipher.py  test_crypto_kdf.py  test_crypto_vault.py  test_db_models.py  test_deduplicator.py  test_exporter_chunking.py  test_exporter_dl_retry.py  test_exporter_export_retry.py  test_exporter_filter.py  test_history_render.py  test_job_manager.py  test_job_pause_resume.py  test_job_persistence.py  test_new_message_watcher.py  test_proxy_parser.py  test_proxy_periodic.py  test_proxy_pool.py  test_routes_auth.py  test_routes_avatars.py  test_routes_chats_sync.py  test_routes_history.py  test_routes_jobs_delete_filter.py  test_routes_telegram.py  test_smoke.py  test_tdl_orphan_killer.py  test_tdl_progress_parser.py  (+3 more)
